// Device intialization and Request random number

syntax = "proto3";

message Error {
    int32 code = 1;
    string message = 2;
}

message Success {
}

message RandomNumberResponse {
    bytes number = 1;
}

message RandomNumberRequest {
}

message DeviceInfoRequest {
}

message DeviceInfoResponse {
    string name = 1;
    bool initialized = 2;
    string version = 3;
    bool mnemonic_passphrase_enabled = 4;
}

message SetDeviceNameRequest {
    string name = 1;
}

message SetDeviceLanguageRequest {
    string language = 1;
}

message SetPasswordRequest {
}

message CreateBackupRequest {
  // TODO add backup creation args
  uint32 timestamp = 1;
  int32 timezone_offset = 2;
}

message RestoreBackupRequest {
  // TODO add backup creation args
  string id = 1;
}

message ListBackupsRequest {
}

message ShowMnemonicRequest {
}

message InsertRemoveSDCardRequest {
  enum SDCardAction {
    REMOVE_CARD = 0;
    INSERT_CARD = 1;
  }
  SDCardAction action = 1;
}

enum BTCCoin {
  BTC = 0;
  TBTC = 1;
  LTC = 2;
  TLTC = 3;
};

enum BTCScriptType {
  SCRIPT_UNKNOWN = 0;
  SCRIPT_P2PKH = 1;
  SCRIPT_P2WPKH_P2SH = 2;
  SCRIPT_P2WPKH = 3;
}

message BTCPubRequest {
  repeated uint32 keypath = 1;
  enum OutputType {
    TPUB = 0;
    XPUB = 1;
    YPUB = 2;
    ZPUB = 3;
    ADDRESS = 4;
  }
  BTCScriptType script_type = 2; // only applies for ADDRESS
  BTCCoin coin = 3;
  OutputType output_type = 4;
  bool display = 5;
}

message PubResponse {
  string pub = 1;
}

message BackupInfo {
  string id = 1;
  uint32 timestamp = 2;
  uint32 timezone_offset = 3;
}

message ListBackupsResponse {
  repeated BackupInfo info = 1;
}

message BTCSignInitRequest {
  BTCCoin coin = 1;
  BTCScriptType script_type = 2; // script type for inputs and changes
  uint32 bip44_account = 3;
  uint32 version = 4; // reserved, must be 1
  uint32 num_inputs = 5;
  uint32 num_outputs = 6;
  uint32 locktime = 7; // reserved, must be 0
}

message BTCSignNextResponse {
  enum Type {
    INPUT = 0;
    OUTPUT = 1;
    DONE = 2;
  }
  Type type = 1;
  uint32 index = 2;
  bool has_signature = 3; // only as a response to BTCSignInputRequest
  // 64 bytes (32 bytes big endian R, 32 bytes big endian S). Only if has_signature is true.
  bytes signature = 4;
}

message BTCSignInputRequest {
  bytes prevOutHash = 1;
  uint32 prevOutIndex = 2;
  uint64 prevOutValue = 3;
  uint32 sequence = 4; // reserved, must be 0xffffffff
  repeated uint32 keypath = 6; // all inputs must be ours.
}

enum BTCOutputType {
  UNKNOWN = 0;
  P2PKH = 1;
  P2SH = 2;
  P2WPKH = 3;
  P2WSH = 4;
}

message BTCSignOutputRequest {
  bool ours = 1;
  BTCOutputType type = 2; // if ours is false
  // 20 bytes for p2pkh, p2sh, pw2wpkh. 32 bytes for p2wsh.
  uint64 value = 3;
  bytes hash = 4; // if ours is false
  repeated uint32 keypath = 5; // if ours is true
}

message SetMnemonicPassphraseEnabledRequest {
  bool enabled = 1;
}

message Request {
    oneof request {
        RandomNumberRequest random_number = 1;
        SetDeviceNameRequest device_name = 2;
        SetDeviceLanguageRequest device_language = 3;
        DeviceInfoRequest device_info = 4;
        SetPasswordRequest set_password = 5;
        CreateBackupRequest create_backup = 6;
        ShowMnemonicRequest show_mnemonic = 7;
        BTCPubRequest btc_pub = 8;
        BTCSignInitRequest btc_sign_init = 9;
        BTCSignInputRequest btc_sign_input = 10;
        BTCSignOutputRequest btc_sign_output = 11;
        InsertRemoveSDCardRequest insert_remove_sdcard = 12;
        SetMnemonicPassphraseEnabledRequest set_mnemonic_passphrase_enabled = 13;
        ListBackupsRequest list_backups = 14;
        RestoreBackupRequest restore_backup = 15;
    }
}

message Response {
    oneof response {
        Success success = 1;
        Error error = 2;
        RandomNumberResponse random_number = 3;
        DeviceInfoResponse device_info = 4;
        PubResponse pub = 5;
        BTCSignNextResponse btc_sign_next = 6;
        ListBackupsResponse list_backups = 7;
    }
}
